# squares

./: 1726.hs  README  cabal.project  squares.cabal  squares.hs  stack.yml
integer-roots/: integer-roots.cabal
