name:          squares
version:       1.0
cabal-version: >=1.10
build-type:    Simple

executable squares
  build-depends:
    base >=4.9 && <5,
    integer-roots == 1.0.3.1,
    ghc,
    async,
    unliftio,
    parallel,
    deepseq
  main-is: squares.hs
  default-language: Haskell2010
  ghc-options: -Wall -Widentities -Wcompat -threaded -with-rtsopts=-N
